2007-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Use prompt_in.

2007-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-chio.pl.in, changer-src/chg-iomega.pl.in,
	  changer-src/chg-rth.pl.in, dumper-src/gnutar.pl.in,
	  server-src/amoverview.pl.in, server-src/amstatus.pl.in,
	  server-src/amtoc.pl.in: Clean ENV and set PATH.

2006-12-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Don't repport error for many run in a day if
			       it's amflush.

2006-12-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (quote_string): Escape '\' character.

2006-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/display_commands.c: Send quoted text to amindexd.
	* recover-src/extract_list.c: Send quoted text to amindexd.
	* recover-src/set_commands.c: Send quoted text to amindexd.

2006-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-disk.sh.in: LASTSLOT in a changerfile for chg-disk.

2006-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Compilation fix.

2006-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/packet.c (pkt_init_empty): New function.
	* common-src/packet.h (pkt_init_empty): New prototype.
	* amandad-src/amandad.c, common-src/protocol.c,
	  common-src/security-util.c: Use pkt_init_empty.

2006-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c: Print nothing if the list is emtpy.

2006-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Fix filename for output file.

2006-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c: Fix printf format error.

2006-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define __attribute__ for gcc >= 3.
	* common-src/packet.c (pkt_init): Accept NULL for fmt.
	* amandad-src/amandad.c, common-src/protocol.c,
	  common-src/security-util.c: Pass NULL to pkt_init.