@@ -603,6 +603,7 @@ while(<AMDUMP>) {
 		$taper_started{$hostpart}=1;
 		$taper_finished{$hostpart}=0;
 		$taper_time{$hostpart}=$1;
+		$ntchunk_size = 0;
 	}
 	#features (maybe missing features)
 	elsif(/driver: send-cmd time (\S+) to taper: FILE-WRITE (\d+-\d+) (\S+) (\S+) (\S*) (\S+) (\d*) (\S+)/){
@@ -626,6 +627,7 @@ while(<AMDUMP>) {
 		$taper_started{$hostpart}=1;
 		$taper_finished{$hostpart}=0;
 		$taper_time{$hostpart}=$1;
+		$ntchunk_size = 0;
 	}
 	elsif(/driver: send-cmd time (\S+) to taper: PORT-WRITE (\d+-\d+) (\S+) (\S+) \d+( \d+|)/){
 		$current_time=$1;
@@ -637,6 +639,7 @@ while(<AMDUMP>) {
 		$taper_started{$hostpart}=1;
 		$taper_finished{$hostpart}=0;
 		$taper_time{$hostpart}=$1;
+		$ntchunk_size = 0;
 	}
 	elsif(/driver: send-cmd time (\S+) to taper: PORT-WRITE (\d+-\d+) (\S+) (\S+) (\S+) \d+ \d+/){
 		$current_time=$1;
@@ -649,6 +652,7 @@ while(<AMDUMP>) {
 		$taper_started{$hostpart}=1;
 		$taper_finished{$hostpart}=0;
 		$taper_time{$hostpart}=$1;
+		$ntchunk_size = 0;
 	}
 	elsif(/driver: result time (\S+) from taper: (DONE|PARTIAL) (\d+-\d+) (\S+) (\d+) "?\[sec (\S+) kb (\d+) kps/) {
 		$current_time=$1;
@@ -663,18 +667,21 @@ while(<AMDUMP>) {
 			$size{$hostpart}=$size;
 		}
 		$ntpartition{$nb_tape}++;
-		$ntsize{$nb_tape} += $size{$hostpart};
+		$ntsize{$nb_tape} += $size{$hostpart} - $ntchunk_size;
 		if(defined $esize{$hostpart} && $esize{$hostpart} > 1) {
-			$ntesize{$nb_tape} += $esize{$hostpart};
+			$ntesize{$nb_tape} += $esize{$hostpart} - $ntchunk_size;
 		}
 		else {
-			$ntesize{$nb_tape} += $size{$hostpart};
+			$ntesize{$nb_tape} += $size{$hostpart} - $ntchunk_size;
 		}
 		if ($3 eq "PARTIAL") {
 			$partial{$hostpart} = 1;
 		}
 		else {
 			$partial{$hostpart} = 0;
+		}
+		if($ntchunk_size > 0) {
+			$ntchunk{$nb_tape}++;
 		}
 	}
 	elsif(/driver: result time (\S+) from taper: (TRY-AGAIN|TAPE-ERROR) (\d+-\d+) (.+)/) {
@@ -742,6 +749,13 @@ while(<AMDUMP>) {
 		$ntpartition{$nb_tape} = 0;
 		$ntsize{$nb_tape} = 0;
 		$ntesize{$nb_tape} = 0;
+		$ntchunk{$nb_tape} = 0;
+	}
+	elsif(/splitting chunk that started at \d*kb after (\d*)kb/) {
+		$ntchunk{$nb_tape}++;
+		$ntsize{$nb_tape} += $1;
+		$ntesize{$nb_tape} += $1;
+		$ntchunk_size += $1;
 	}
 	else {
 		#print "Ignoring: $_\n";
@@ -1160,8 +1174,12 @@ if (defined $opt_summary) {
 	if($nb_tape > 1 || $tape_size != 0) {
 		for($i=1; $i <= $nb_tape; $i++) {
 			if($tape_size != 0) {
-				printf "  tape %-3d      : %3d %9d$unit %9d$unit (%6.2f%%) %s\n",
+				printf "  tape %-3d      : %3d %9d$unit %9d$unit (%6.2f%%) %s",
 					$i, $ntpartition{$i}, $ntsize{$i}, $ntesize{$i}, 100*$ntsize{$i}/$tape_size, $ntlabel{$i};
+				if($ntchunk{$i} > 0) {
+					printf " (%d chunks)", $ntchunk{$i};
+				}
+				print "\n";
 			}
 			else {
 				printf "  tape %-3d      : %3d %9d$unit %9d$unit %s\n",
