@@ -1,3 +1,6 @@
+2007-01-05  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amstatus.pl.in: Fix split-dump accounting.
+
 2007-01-04  Jean-Louis Martineau <martineau@zmanda.com>
 	* restore-src/restore.c: Use prompt_in.
 
